# erc8004-sdk-py

./: .env.example  .gitignore  README.md  pyproject.toml
abi/: identityRegistry.json
erc8004_sdk/: __init__.py  client.py  contract.py  exceptions.py  signer.py  storage.py  types.py
erc8004_sdk/abi/: __init__.py  reputationRegistry.json
examples/: reputation_workflow.py
tests/: test_client.py  test_contract.py  test_contract_utils.py  test_reputation.py  test_signer.py  test_storage.py
