[project]
name = "erc8004-sdk"
version = "0.1.0"
description = "Python SDK for interacting with ERC-8004 compatible contracts."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["web3", "ethereum", "sdk", "erc8004"]
dependencies = [
  "web3>=6.0.0",
  "eth-account>=0.10.0",
  "eth-abi>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "python-dotenv>=1.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

